<resources>
    <string name="app_name">Test</string>
    <string name="nav_main">Главная</string>
    <string name="nav_chat">Чат</string>
    <string name="nav_event">Мероприятия</string>
    <string name="nav_profile">Профиль</string>
    <string name="profile_edit">Редактировать профиль</string>
    <string name="event_name">#ПомогиВетерану</string>
    <string name="event_description">Тут типо описание да-да, все дела</string>
    <string name="event_date">20.02.2025</string>
    <string name="event_adress">Ул. Гоголя д 12 кв. 432 к1</string>
    <string name="btn_confirm_changes">Сохранить изменения</string>
    <string name="btn_delete_event">Удалить мероприятие</string>
    <string name="chat_name">PATRIOT</string>
    <string name="chat_online">Участников в сети</string>
    <string name="chat_message">Сообщение....</string>
    <string name="event_name_admin">Название мероприятия</string>
    <string name="event_description_admin">Краткое описание</string>
    <string name="event_date_admin">Дата проведения</string>
    <string name="event_adress_admin">Место проведения</string>
    <string name="btn_create_event">Создать мероприятие</string>
    <string name="map">Карта</string>
    <string name="list">Список</string>
    <string name="forgot_title">Восстановление доступа</string>
    <string name="email">Email</string>
    <string name="next">Продолжить</string>
    <string name="login_title">Вход</string>
    <string name="password">Пароль</string>
    <string name="forgot">Забыли пароль?</string>
    <string name="btn_login">Войти</string>
    <string name="not_have_account">Нет аккаунта?</string>
    <string name="register">Зарегистрироваться</string>
    <string name="main_name">Питер Паркерович Паркер</string>
    <string name="main_position">Волонтер</string>
    <string name="main_rating">Рейтинг #9999999</string>
    <string name="main_points">Баллы 9999999</string>
    <string name="main_show_events">Посмотреть\nмероприятия</string>
    <string name="main_posts">Посты</string>
    <string name="main_top_users">Топ волонтеров</string>
    <string name="news">Новости</string>
    <string name="profile_fio">ФИО</string>
    <string name="profile_school">Учебное заведение</string>
    <string name="main_school">ПТУ</string>
    <string name="main_email">stelv1k@nyxie.pro</string>
    <string name="btn_edit">Изменить данные</string>
    <string name="btn_block_account">Заблокировать аккаунт</string>
    <string name="members">Участники</string>
    <string name="btn_logout">Выйти</string>
    <string name="btn_cancel_changes">Отменить изменения</string>
    <string name="register_title">Регистрация</string>
    <string name="btn_create_account">Создать аккаунт</string>
    <string name="register_have_account">Есть аккаунт?</string>
    <string name="register_login">Войти в аккаунт</string>
    <string name="event_signup">Записаться</string>
    <string name="event_show_members">Посмотреть участников</string>
    <string name="chat_text">Привет</string>
    <string name="chat_other_name">Организатор</string>
    <string name="event_etc">Подробнее...</string>
    <string name="main_position_school">Волонтер - ПТУ</string>
    <string name="leader_points">999999999</string>
    <string name="invalid_email">Введите корректный email</string>
    <string name="invalid_password">Пароль должен быть не короче 6 символов</string>
    <string name="required_field">Поле обязательно для заполнения</string>
    <string name="auth_failed">Не удалось войти. Проверьте данные</string>
    <string name="register_failed">Не удалось зарегистрироваться</string>
    <string name="recover_sent">Письмо для восстановления отправлено</string>
    <string name="recover_failed">Не удалось отправить запрос восстановления</string>
    <string name="network_error">Ошибка сети. Проверьте подключение</string>
    <string name="events_load_failed">Не удалось загрузить мероприятия</string>
    <string name="event_joined">Вы записались на мероприятие</string>
    <string name="event_join_failed">Не удалось записаться на мероприятие</string>
    <string name="participants_open">Список участников пока недоступен</string>
    <string name="news_load_failed">Не удалось загрузить новости</string>
    <string name="empty_news_body">Текст новости отсутствует</string>
    <string name="profile_load_failed">Не удалось загрузить профиль</string>
</resources>